--- a/SampleLogin/style.css
+++ b/SampleLogin/style.css
@@ -1,3 +1,9 @@
+.registerButton{
+    text-align: center;
+    padding-left: 50%;
+    color: red;
+}
+
 * {
     box-sizing: border-box;
     font-family: -apple-system, BlinkMacSystemFont, "segoe ui", roboto, oxygen, ubuntu, cantarell, "fira sans", "droid sans", "helvetica neue", Arial, sans-serif;
@@ -199,3 +205,4 @@ body {
   background-color: #2ea3f2;
     transition: background-color 0.2s;
 }
+
