--- a/SampleLogin/style.css
+++ b/SampleLogin/style.css
@@ -1,3 +1,6 @@
+#btn{
+    background-color: #4CAF50 !important;
+}
 .registerButton{
     text-align: center;
     padding-left: 50%;
@@ -108,40 +111,6 @@ body {
 body.loggedin {
 	background-color: white;
 }
-.content {
-	width: 1000px;
-	margin: 0 auto;
-}
-.content h2 {
-	margin: 0;
-	padding: 25px 0;
-	font-size: 22px;
-	border-bottom: 1px solid #e0e0e3;
-	color: #25458d;
-}
-.content > p, .content > div {
-	box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
-	margin: 25px 0;
-	padding: 25px;
-	background-color: #fff;
-}
-.content > p table td, .content > div table td {
-	padding: 5px;
-}
-.content > p table td:first-child, .content > div table td:first-child {
-	font-weight: bold;
-	color: #25458d;
-	padding-right: 15px;
-}
-.content > div p {
-	padding: 5px;
-	margin: 0 0 10px 0;
-}
-
-
-
-
-
 
 
 * {
@@ -205,3 +174,4 @@ body {
   background-color: #2ea3f2;
     transition: background-color 0.2s;
 }
+
