updates to downloads page

--- a/SampleLogin/style.css
+++ b/SampleLogin/style.css
@@ -1,6 +1,6 @@
-#btn{
+/* #btn{
     background-color: #4CAF50 !important;
-}
+} */
 .registerButton{
     text-align: center;
     padding-left: 50%;
